# vadrecorder

./: .gitignore  README.md
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: CMakeLists.txt  vadrecorder-jni.cpp
example/android/app/src/main/java/com/example/vadrecorder_demo/: MainActivity.java  SilenceMusicService.java
example/android/app/src/main/res/layout/: activity_main.xml
example/android/app/src/main/res/values/: strings.xml
example/unix/: .gitignore  CMakeLists.txt  VadRecorderUnix.cpp
include/: IAudioEncoder.hpp  VadRecorder.hpp  logger.h  vadrecorder.hpp
src/: CMakeLists.txt  VadRecorder.cpp  VoAACEncoder.cpp  VoAACEncoder.hpp  litevad.c  litevad.h  lockfree_ringbuf.c  lockfree_ringbuf.h  vadrecorder.cpp
